--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>MAPUI</groupId>
-	<artifactId>MAPUI</artifactId>
+	<artifactId>seleniumEasy</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>MAPUI</name>
+	<name>SELENIUMEASYUI</name>
 	<description>UI automation project, which will test all UI screen of this project.</description>
 
 	<dependencies>
@@ -19,6 +18,11 @@
 			<artifactId>reportng</artifactId>
 			<version>1.1.4</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.3</version>
 		</dependency>
 		<dependency>
    			 <groupId>javax.mail</groupId>
@@ -36,9 +40,9 @@
 			<version>2.53.0</version>
 		</dependency>
 		<dependency>
-			<groupId>FactoryManager</groupId>
-			<artifactId>FactoryManager</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.6</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.supercsv</groupId>
@@ -148,4 +152,5 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<groupId>seleniumEasy</groupId>
 </project>
